overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,7 @@ body {
   border-radius: 0.5%;
   border: solid black 4px;
   margin-bottom: 0.5%;
+  overflow: auto;
 }
 
 #averages{
@@ -56,6 +57,7 @@ body {
   background-color: white;
   border-radius: 0.5%;
   border: solid black 4px;
+  overflow: auto;
 }
 
 .dots{
@@ -110,6 +112,7 @@ body {
   background-color: white;
   border-radius: 0.5%;
   border: solid black 4px;
+  overflow: auto;
 }
 
 .rightColumn {
@@ -117,6 +120,7 @@ body {
   background-color: white;
   border-radius: 0.5%;
   border: solid black 4px;
+  overflow: auto;
 }
 
 #map {
